# dice

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  WORKLOG.md  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.sqlx/: query-04df9d9f511dc98d3c481f3a80727d524303a5177ac4555c33ba1210089bbe8e.json  query-0799b1c53a889f58064e4d7fcfe7310be7df9278a7eb16f23b56b0bbd0bf0250.json  query-09887a9eaec41885d14b2fdc37ac60b134ad7e63d6d4374d36c655acb3f9d5e9.json  query-0a1034ea3d9d08ac6b670fd6ae18f28c1fdfc4fc943b4a3b59091a8de26d64ad.json  query-0a4bfd0d3912cf100aa1c2e24a962f50425ad72fc564c85d7dd5da0c2b64fd77.json  query-0a5ee054ca856e958fa766918c7bcaaf27b6b783310b13a56ecf9a97964c0986.json  query-0b4fcff8e53bf8e8a591669ba53175bfb11297dab5eaded2c0eb7a8104f15e7e.json  query-0c2bdc02195a3c02a0f6ae25c5c65a00bfea1dfdd3f34b6fbd00ccec8a22b05d.json  query-0cfc2af23ef01703764adfd3af741865c9ec706b10f7caf7abad1abe6da472c1.json  query-0d7b12625a967053a03cd329f975e95fff85f1de2e4b107c66ac8292062c0031.json  query-1018e3b2e6e6790f7473902ec1275a4672d735b963710d57f011282b1c81e25f.json  query-1c9460031a0197b1cdbce19038e18b79c81ccbe6127f81b610fbbdd3b4c0c50b.json  query-1d6f522e930729c70bb9544401a23cf3d2c770319a6fba1cef0a82e44fe95d34.json  query-1f01767c9eda4a47e2cd002b6fcee9869f7da5fdee73c35dcf0849be09574dc9.json  query-20363ed2d3660dae12229299287aebfeb8582ae8464ce1e078837f25fb0f04d8.json  query-21dcd3d7dbc7bdef7fcddd897ff99b2e51d1e358982adb0ee129187945ed38f6.json  query-23f91398b128877fd3437da2a61e68a5702b1029cacf8c6088a49112b2c48c18.json  query-26b6a63f4bf29b368ba0fef93d31e356485e50edb0057f29c0665730538f03d1.json  query-279a14aa3a9597cfa48f99dff0951f04539d8502ca9accbf7ec086951985a611.json  query-27a2d5c080af829acbd6ccb346a883d85a1b20ada03102d9ef93d06264b6329b.json  query-2924629e46241d838ec3377cd7eaf6d35a011fd8b5734a8398e7943fcc5aedd2.json  query-2f28478ed0b6c71f8971f7dc1920e6fed2b9c57c89b7e60175793639b26a5cf9.json  query-31e4f3a7bcd8f3ad3e4aedcb305a407a724810c54befb04aef52d8e628d654ef.json  query-343aae56123ba4c380ddc6b16f5b486a8b648b41ee2c8f7430509aed84945a35.json  query-3502781f2d7affdbec426a5d27ac88eb1543c3210dee30ef2a00f57ef5b8d9f3.json  query-36134e00c6104b098c4c6cfab827536f2697647c35b6a40d8fe55535437d309e.json  query-392a08933a43d76e435f1c7ac6c7765c3c2bc8f750070e08ba50da1b5e3d94fd.json  query-3b65938b1f9c0b41ee402b4032e701180392da8dcc7239a60ef148ac12591f5f.json  (+98 more)
apps/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-client/src-tauri/capabilities/: default.json
apps/desktop-client/src-tauri/examples/: voice_loopback.rs
apps/desktop-client/src-tauri/src/: audio.rs  bridge.rs  commands.rs  dto.rs  emit.rs  keystore.rs  lib.rs  main.rs  ptt.rs  session.rs  state.rs
apps/desktop-client/src-tauri/src/cache/: mod.rs  schema.rs
apps/desktop-client/src-tauri/tests/: host_gate.rs
apps/desktop-native/: .gitignore  Cargo.toml  README.md  build.rs
apps/desktop-native/fonts/: NOTICE.md
apps/desktop-native/scripts/: measure-ram.ps1
apps/desktop-native/src/: main.rs  seed.rs
apps/desktop-native/ui/: app.slint  dialogs.slint  icons.slint  login.slint  shell.slint  state.slint  theme.slint  widgets.slint
benchmarks/loadgen/: Cargo.toml  bench.sh  run-bench.sh
benchmarks/loadgen/src/: config.rs  conn.rs  identity.rs  main.rs  run.rs  stats.rs  transport.rs
crates/auth-core/: Cargo.toml
crates/auth-core/src/: cipher.rs  lib.rs  password.rs  token.rs  totp.rs
crates/cache/: Cargo.toml
crates/cache/src/: keys.rs  lib.rs  memory.rs  redis_impl.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  id.rs  lib.rs  shutdown.rs  time.rs
crates/database/: Cargo.toml
crates/database/migrations/: 0001_users.sql  0002_auth_sessions.sql  0003_guilds_channels.sql  0004_messages.sql  0005_replies.sql  0006_reactions.sql  0007_attachments.sql  0008_avatars.sql  0009_read_markers.sql  0010_totp.sql  0011_email_verify_reset.sql  0012_friendships.sql  0013_voice_channels.sql  0014_event_outbox.sql
crates/database/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs  local.rs  nats.rs  rpc.rs  subject.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/network-core/: Cargo.toml
crates/network-core/src/: lib.rs  tls.rs
crates/network-core/src/client/: api.rs  gateway.rs  mod.rs  policy.rs  quic.rs  tls.rs  token.rs  transport.rs
crates/network-core/src/server/: https.rs  mod.rs  quic.rs
crates/network-core/tests/: client_e2e.rs  server_loopback.rs  split_smoke.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: lib.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: framing.rs  lib.rs
crates/voice-core/: Cargo.toml
crates/voice-core/src/: framing.rs  jitter.rs  lib.rs  plc.rs
crates/voice-core/src/preprocess/: aec.rs  mod.rs  ns.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: frame_decode.rs  history_query.rs  voice_frame.rs
services/api-gateway/: Cargo.toml
services/api-gateway/src/: dispatch.rs  durable.rs  handshake.rs  lib.rs  main.rs  rest.rs  resume.rs  router.rs  session.rs  voice_dg.rs  ws.rs
services/api-gateway/tests/: gateway_e2e.rs
services/chat-service/: Cargo.toml
services/chat-service/src/: lib.rs  main.rs  relay.rs  rpc.rs  service.rs
services/chat-service/tests/: chat_rpc.rs  live.rs  outbox.rs
services/media-service/: Cargo.toml  README.md
services/media-service/src/: gc.rs  lib.rs  service.rs  store.rs
services/media-service/tests/: gc.rs  live.rs
services/monolith/: Cargo.toml  README.md
services/monolith/src/: config.rs  keygen.rs  main.rs
services/monolith/tests/: wss_demo.rs
services/notification-service/: Cargo.toml  README.md
services/notification-service/src/: lib.rs
services/notification-service/tests/: live.rs
services/presence-service/: Cargo.toml
services/presence-service/src/: lib.rs  main.rs  rpc.rs  service.rs
services/presence-service/tests/: presence_rpc.rs
services/voice-service/: Cargo.toml  README.md
services/voice-service/src/: lib.rs  service.rs
(+157 files in other folders)
