[package]
name = "dice-auth-core"
description = "Argon2id password hashing, EdDSA (Ed25519) access JWTs, opaque rotating refresh tokens. Pure CPU/crypto - no IO, no async."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dice-common = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }
jsonwebtoken = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
totp-rs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
