[package]
name = "dice-cache"
description = "Cache abstraction: Redis (ConnectionManager) + in-memory (moka) backends, fixed-window RateLimiter helper."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
dice-common = { workspace = true }
moka = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
