[package]
name = "dice-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Postgres pool bootstrap + embedded migrations (single linear history) for Dice"

[dependencies]
dice-common = { workspace = true }
dice-metrics = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
