[package]
name = "dice-voice-core"
description = "Pure-Rust voice plumbing: RTP-like Opus frame framing, a jitter buffer, and packet-loss-concealment bookkeeping. No async, no IO, no codec."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
# Optional near-end voice pre-processor (AEC + noise suppression). Pure Rust;
# only instantiated when the client sets DICE_VOICE_AEC, but compiled always.
rustfft = { workspace = true }

[lints]
workspace = true
