[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dice-common       = { workspace = true }
dice-protocol     = { workspace = true }
dice-network-core = { workspace = true }
dice-event-bus    = { workspace = true }
dice-cache        = { workspace = true }
dice-auth-core    = { workspace = true }
auth-service      = { workspace = true }
chat-service      = { workspace = true }
presence-service  = { workspace = true }

anyhow      = { workspace = true }
async-trait = { workspace = true }
axum        = { workspace = true }
bytes       = { workspace = true }
dashmap     = { workspace = true }
getrandom   = { workspace = true }
parking_lot = { workspace = true }
prost       = { workspace = true }
subtle      = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
tower-http  = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
dice-database     = { workspace = true }
futures-util      = { workspace = true }
reqwest           = { workspace = true }
sqlx              = { workspace = true }
tokio-tungstenite = { workspace = true }

[lints]
workspace = true
