[package]
name = "presence-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dice-common = { workspace = true }
dice-protocol = { workspace = true }
dice-cache = { workspace = true }
dice-database = { workspace = true }
dice-event-bus = { workspace = true }
dice-logging = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
